app/assets/stylesheets/steps.scss
/* ... */
.edit-step-bottom-pic-bar {
    background-color: #f6f6f6;
    width: 100%;
    display: flex;
    justify-content: space-between;
    box-shadow: 0 2px 0 rgba(0,0,0,0.15);
}

.view-all-button {
    background-color: #f6f6f6;
    border: 1px solid #dedede;
    color: #333;    
    border-radius: 4px;
    line-height: 20px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 400;
    padding: 0 12px;
    width: 73px;
    height: 33px;
    margin-left: 12px;
    margin-bottom: 12px;
}
.view-all-button:hover {
    background-color: #eee;
    border:1px solid #d4d4d4;
    color: #333;  
    border-radius: 4px;
    line-height: 20px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 400;
    padding: 0 12px;
    width: 73px;
    height: 33px;
    margin-left: 12px;
    margin-bottom: 12px;
}

.plus-add-button {
    background-color: #f6f6f6;
    border: 1px solid #dedede;
    color: #333;    
    border-radius: 4px;
    line-height: 20px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 400;
    padding: 0 12px;
    width: 73px;
    height: 33px;
    margin-left: 12px;
    margin-bottom: 12px;
    text-align: center;
}
.plus-add-button:hover {
    background-color: #eee;
    border:1px solid #d4d4d4;
    color: #333;  
    border-radius: 4px;
    line-height: 20px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    font-weight: 400;
    padding: 0 12px;
    width: 73px;
    height: 33px;
    margin-left: 12px;
    margin-bottom: 12px;
    text-align: center;
}

.edit-step-submit-button {
    background-color: #df6904;
    border-color: #cf6000;
    color: #fff;
    border-radius: 4px;
    font-size: 14px;
    font-weight: 400;
    padding: 6px 12px;
    width: 73px;
    height: 33px;
    text-align: center;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    margin-right: 12px;
    box-sizing: border-box;
    margin-bottom: 12px;
}

.edit-step-submit-button:hover {
    background-color: #e86c00;
}

.edit-step-title-body-container {

    width: 800px;
    height: 594px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    background-color: #f6f6f6;
     border: 1px solid black; 
    border-radius: 9px;
    margin-bottom: 180px;
    border-color: #CBCFD0;
    margin-top: 30px;

}

.edit-step-pic-smaller-box {
    border-radius: 10px;
    box-shadow: inset 0 0 3px rgba(0,0,0,.15);
    background-color: white;
    border: 1px solid #dedede;
    font-size: 14px;
    line-height: 20px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    text-align: center;
    width: 776px;
    height: 89px;
    margin-top: 10px;
    display: flex;
    justify-content: flex-start;
    //   background-color: #eeeeee;
    // width: 990px;
    // height: 115px;
    // border: 1px solid #dedede;
    // border-radius: 10px;
    // -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,.15);
    // margin: 10px 10px 10px 10px;

}

.present {
    background-color: #f6f6f6;
    box-shadow: none;
    border: none;
}

.present:hover {
    cursor: auto;
}


.edit-step-title-box {
    width: 765px;
    height: 20px;
    font-weight: 700;
    font-size: 18px;
    color: #555;
    border: 1px solid #ccc;
    border-radius: 4px;
    background-color: white;
    padding: 4px 6px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.edit-step-body-box {
    min-height: 370px;
    padding: 10px;
    padding-bottom: 5px;
    overflow: auto;
    font-size: 15px;
    line-height: 1.5rem;
    font-family: Arial,Helvetica,Verdana,Tahoma,sans-serif;
    color: black;
    width: 764px;
    height: 385px;
    background-color: white;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    height: 20px;
    padding: 4px 6px;
    // margin-bottom: 208px;
}

.link-to-edit-recipe-title-description {
    color: #333;
    font-size: 15px;
    width: 100%;
    font-weight: 700;
    display: block;
    margin-top: 10px;
}

.link-to-edit-recipe-title-description:hover {
    text-decoration: underline;
}

.edit-step-body {
    font-size: 12px;
    color: #333;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    padding-top: 13px;
    padding-bottom: 10px;
}

.edit-step-body:hover {
    cursor: pointer;
}

.link-to-edit-step-title-description {
    color: #333;
    font-size: 15px;
    width: 100%;
    font-weight: 700;
    display: block;
    margin-top: 10px;
}

.link-to-edit-step-title-description:hover {
    text-decoration: underline;
}

.drag-icon {
    margin-top: 7px;
    font-size: large;
}

.drag-icon:hover {
    cursor: pointer;
    font-size: large;
}



// .arrow-icon {
//     position: absolute;
//     width: 25px;
//     height: 40px;
//     top: 

// }

.close-icon {
    margin-bottom: 10px;
    font-size: large;
}

.close-icon:hover {
    // opacity: 1;
    cursor: pointer;
    color: red;
    font-size: large;
}


.save-button {
    background-color: #df6904;
    border-color: #cf6000;
    color: #fff;
    border-radius: 4px;
    font-size: 14px;
    font-weight: 400;
    padding: 6px 12px;
    width: 73px;
    height: 33px;
    text-align: center;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    margin-right: 12px;
    box-sizing: border-box;
    margin-bottom: 12px;
}

.save-button:hover {
    background-color: #e86c00;
    border-color: #c55b00;
    color: #fff;
    border-radius: 4px;
    font-size: 14px;
    font-weight: 400;
    padding: 6px 12px;
    width: 73px;
    height: 33px;
    text-align: center;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
}

.remove-preview-button {
    z-index: 100;
}

